deploy/k8s/hasura.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papergraph-hasura
  labels:
    app: papergraph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papergraph
      tier: hasura
  template:
    metadata:
      labels:
        app: papergraph
        tier: hasura
    spec:
      containers:
        - name: hasura
          image: hasura/graphql-engine:v1.2.0.cli-migrations-v2
          ports:
            - containerPort: 8080
              name: http
