deploy/k8s/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: papergraph-postgres
  labels:
    app: papergraph
spec:
  ports:
    - port: 5432
  selector:
    app: papergraph
    tier: postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papergraph-postgres
  labels:
    app: papergraph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papergraph
      tier: postgres
  template:
    metadata:
      labels:
        app: papergraph
        tier: postgres
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
